# GitCloner

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  scrapy.cfg
GitCloner/: items.py  middlewares.py  pipelines.py  settings.py
GitCloner/resources/: borges_et_al_2016.csv
GitCloner/spiders/: cloner.py  github_spider.py
scripts/: domain_topics.csv  get_domain_topics.py  stoptopics.txt
